--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ a:hover{
 	background: #fff;
 }
 .dark_bg{
-	background: #1F2235;
+	background: white;
 }
 /* START PRELOADER DESIGN */
 .preloader {
